--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face
+  font-family: 'Archivo'
+  
+*
+  font-family: Archivo,serif
+
+.mat-sort-header-content
+  position: relative!important
+
+.mat-sort-header-arrow
+  display: none!important
+
+.mat-paginator-page-size
+  display: none!important
